# xidunku

./: .gitignore  README.md  book-template.toml  book.toml
docs/: index.html  print.html  searchindex.js  searchindex.json  test.html
docs/inku/: index.html
docs/keepku/: index.html
docs/keepku/mdbook-kubook/: index.html
docs/keepku/messaging-sys/: index.html
docs/logs/: index.html  log1912.html
docs/outku/: index.html
docs/projects/: index.html
docs/projects/2020-tw-lantern/: index.html
docsrc/: README.md  SUMMARY.md
docsrc/inku/: README.md
docsrc/keepku/: README.md
docsrc/keepku/messaging-sys/: README.md
docsrc/logs/: log1912.md
docsrc/outku/: README.md
docsrc/projects/2020-tw-lantern/: README.md
images/t101-supertest/: Dockerfile  k8s-pod.yaml  package.json  skaffold.yaml
inku/xctixweb/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.wasmpack  README.md  build.rs  build.sh  k8s-pod.yaml  skaffold.yaml
inku/xctixweb/docs/: index.html
inku/xctixweb/htdocs/: .gitignore  index.html  webterm.html
inku/xctixweb/src/: backend_tpl.html  ca.crt  index.html  main.rs  server.crt  server.key
inku/xctixweb/wasm/webfoo/: Cargo.toml  README.md  index.html
inku/xctixweb/wasm/webfoo/src/: lib.rs
inku/xhoami/: .gitignore  Dockerfile  README.md  app.go  go.mod  go.sum  k8s-pod.yaml  skaffold.yaml
inku/xhoami/htdocs/pub/: index.html
inku/xhoami/htdocs/pub/swagger-ui/: index.html
inku/xkode-server/: Dockerfile  k8s-code-server-k8s.yaml  skaffold.yaml  ws.json
inku/xkode-server/docs/: README.md
inku/xkode-server/docs/x101-echo/: Dockerfile  skaffold.yaml
inku/xode-server/: Dockerfile  Dockerfile.k8scli  Dockerfile.mdbook  README.md  k8s-code-server.yaml  settings.json  skaffold.yaml
inku/xode-server/docs/x101-echo/: Dockerfile  k8s-pod.yaml
inku/xode-server/examples/: ing-nginx-http.yaml  ing-nginx-https.yaml  prod-server.yaml
inku/xode-server/profiles/k8scli/: k8s-code-server-fsgroup.yaml
inku/xode-server/profiles/md/: k8s-code-server-8080.yaml  k8s-code-server-8443.yaml  k8s-code-server-md-all-in-one.yaml  k8s-ingress.yaml  k8s-md.yaml
inku/xode-server/profiles/md/mdtool-sample/: chapter_1.md  chapter_2.md  (+2 more)
inku/xupertest/: Dockerfile  README.md  k8s-dev-pod.yaml  package-lock.json  skaffold.yaml
keepku/kuwasm/lolosa/: Cargo.toml  README.md  index.html
keepku/kuwasm/lolosa/src/: lib.rs
keepku/mdbook-kubook/: .gitignore  Cargo.toml  README.md  book-template.toml  book.toml
keepku/mdbook-kubook/book/: index.html  print.html  searchindex.js  searchindex.json
keepku/mdbook-kubook/booksrc/: README.md
keepku/mdbook-kubook/src/: lib.rs  main.rs
keepku/mdbook-kubook/test/: mdbook-stdin.json
keepku/messaging-sys/: README.md  skaffold.yaml
keepku/messaging-sys/email/: Dockerfile  k8s-pod-slowcat.yaml  k8s-pod-smtpx2.yaml  smtp-talk-expect.yaml
keepku/messaging-sys/rabbitmq/: Dockerfile  k8s-pod-dev.yaml  k8s-pod.yaml
keepku/messaging-sys/rabbitmq/client-js/: Dockerfile  k8s-pod.yaml  package-lock.json  package.json  receive.js  send.js
keepku/qubits/alice/: README.md  complex-number.html  package-lock.json  quantum-gate.html  random-number.html
src/: README.md  SUMMARY.md
src/logs/: log1912.md
