[package]
name = "xctixweb"
version = "0.1.0"
authors = ["y12studio <y12studio@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "xctixweb"
path = "src/main.rs"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.2.18"
actix-web = { version= "1.0", features = ["rust-tls"] }
actix-web-static-files = "0.2"
rustls = "0.15"
handlebars = "2.0.2"
serde_json = "1.0"
chrono = "*"
lazy_static = "1.4.0"
rcgen = "0.4"
anyhow = "1.0"
rand = "0.7"
# wasmtime-rust = "0.8.0"
# webpki = "0.19"

[target.'cfg(target_os="linux")'.dependencies]
webterm = "0.2.0"

[build-dependencies]
actix-web-static-files = "0.2"