[package]
name = "mdbook-kubook"
version = "0.1.7"
authors = ["JOYE LIN <y12studio@gmail.com>"]
edition = "2018"

[lib]
name = "mdbook_kubook_lib"
path = "src/lib.rs"

[[bin]]
name = "mdbook-kubook"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.24"
mdbook = "0.3.5"
pulldown-cmark = "0.5"
pulldown-cmark-to-cmark = "1.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.6"
base64 = "0.11"