[package]
name = "lolosa"
version = "0.1.0"
authors = ["JOYE LIN <y12studio@gmail.com>"]
edition = "2018"

[lib]
name = "lolosa"
path = "src/lib.rs"
crate-type = ['cdylib']

[dependencies]
wasm-bindgen = "0.2"
# pulldown-cmark = "0.6"
geopattern = "0.3.0"
tiny-bip39 = "0.6.2"
tiny-hderive = "0.2.1"
sha2 = "0.8"
sha3 = "0.8"
hex = "0.4"
bs58 = "0.3.0"
parity-multihash = "0.2.0"
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
libra-crypto = { git = "https://github.com/libra/libra.git" }
#
# alloc only work in nightly channel
# rustup run nightly wasm-pack build --target=web
#
ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"] }

[patch.crates-io]
threshold_crypto = { version = "0.3", git = "https://github.com/poanetwork/threshold_crypto" }

#[dependencies.ursa]
# [Wasm for ursa by mikelodder7 · Pull Request #78 · hyperledger/ursa](https://github.com/hyperledger/ursa/pull/78)
#version = "0.3.0"
#default-features = false 
#features = ["wasm"]

[dev-dependencies]
# wasmtime-rust = { git = 'https://github.com/bytecodealliance/wasmtime' }
# anyhow = "1"
secp256k1 = "0.15"
bitcoin = "0.21.0"
pretty_assertions = "0.6"